# mint

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/mint/: mint.hpp
include/mint/common/: defines.hpp
include/mint/core/: application.hpp  engine.hpp  logger.hpp  window.hpp
include/mint/event/: event.hpp  key_events.hpp  mouse_events.hpp  window_events.hpp
include/mint/graphics/: ebo.hpp  renderer.hpp  shader.hpp  texture.hpp  vao.hpp  vbo.hpp
include/mint/input/: key_codes.hpp  key_input.hpp  mouse_buttons.hpp  mouse_input.hpp
include/mint/math/: math.hpp  vector.hpp
include/mint/render_backend/opengl/: gl_ebo.hpp  gl_renderer.hpp  gl_shader.hpp  gl_texture.hpp  gl_vao.hpp  gl_vbo.hpp
res/shaders/: default.frag.glsl  default.vert.glsl
src/core/: engine.cpp  logger.cpp
src/graphics/: ebo.cpp  renderer.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp
src/input/: key_input.cpp  mouse_input.cpp
src/math/: math.cpp  vector.cpp
src/platform/: platform_windows.cpp  windows_window.cpp
src/platform/windows/: windows_logger.cpp  windows_window.cpp
src/render_backend/opengl/: gl_ebo.cpp  gl_renderer.cpp  gl_shader.cpp  gl_texture.cpp  gl_vao.cpp  gl_vbo.cpp
test/: CMakeLists.txt  main.cpp
